--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -134,16 +134,35 @@ li {
     width: auto;
     margin: 0 auto; /* it centers any block level element */
 }
+
 @media (max-width: 900px) {
     .item-img {
         border-radius: 8px;
         /* max-height: 240px; */
-        height: calc(70vh - 100px);
+        height: calc(55vh - 100px);
         width: auto;
         margin: 0 auto; /* it centers any block level element */
     }
 }
-@media (max-width: 1200px) {
+@media (max-width: 700px) {
+    .item-img {
+        border-radius: 8px;
+        /* max-height: 240px; */
+        height: calc(110vh - 100px);
+        width: auto;
+        margin: 0 auto; /* it centers any block level element */
+    }
+}
+@media (max-width: 500px) {
+    .item-img {
+        border-radius: 8px;
+        /* max-height: 240px; */
+        height: calc(40vh - 100px);
+        width: auto;
+        margin: 0 auto; /* it centers any block level element */
+    }
+}
+@media (max-width: 400px) {
     .item-img {
         border-radius: 8px;
         /* max-height: 240px; */
@@ -600,11 +619,11 @@ img {
         font-size: 1em;
     }
 }
-.product-prices {
+/* .product-prices {
     font-size: 1.5em;
     color: #ff5108;
     text-align: center;
-}
+} */
 .product-det{
     font-size: 1.5em;
 }
