--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,8 +50,8 @@
 		rel="stylesheet" type="text/css" href="/assets/slick-1.8.1/slick/slick-theme.css"/>
 
 		{#    icons #}
-		<link href="https://static.insales-cdn.com/assets/1/7151/850927/1639401906/fonts.css" rel="stylesheet" type="text/css">
-		<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
+		{# <link href="https://static.insales-cdn.com/assets/1/7151/850927/1639401906/fonts.css" rel="stylesheet" type="text/css"> #}
+		{# // <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script> #}
 
 		{# <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> #}
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -163,7 +163,7 @@
 						{# </a> #}
 						</div>
 						<div class="col-text-1 text-light element-top-20 element-bottom-20" data-os-animation="none" data-os-animation-delay="0s">
-							<p>Bas prix</p>
+							<p>Prix bas</p>
 						</div>
 					</div>
 					<div class="col-md-3  text-center small-screen-default">
