--- a/templates/car/edit.html.twig
+++ b/templates/car/edit.html.twig
@@ -1,29 +1,44 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Car{% endblock %}
+{% block title %}Edit Car
+{% endblock %}
 
 {% block body %}
-    <h1>Edit Car</h1>
+	<nav aria-label="breadcrumb" class="offset-2 col-10">
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item">
+				<a href="{{ path('app_admin') }}" title="Accueil ADMIN" class="link_black">
+					Accueil ADMIN
+				</a>
+			</li>
+            <li class="breadcrumb-item">
+				<a href="{{ path('app_car_index') }}" class="link_black">
+					Liste de véhicules
+				</a>
+			</li>
+		</ol>
+	</nav>
+	<h1>Edit Car</h1>
 
-    {# {{ include('car/_form.html.twig', {'button_label': 'Update'}) }}
+	{# {{ include('car/_form.html.twig', {'button_label': 'Update'}) }}
+	
+	    <a href="{{ path('app_car_index') }}">back to list</a>
+	
+	    {{ include('car/_delete_form.html.twig') }} #}
 
-    <a href="{{ path('app_car_index') }}">back to list</a>
+	<img class="img-fluid pb-4" width="100px" src="/assets/images/CAR/{{ car.picture }}">
+	<img class="img-fluid pb-4" width="100px" src="/assets/images/CAR/{{ car.picture2 }}">
+	<img class="img-fluid pb-4" width="100px" src="/assets/images/CAR/{{ car.picture3 }}">
+	<img class="img-fluid pb-4" width="100px" src="/assets/images/CAR/{{ car.picture4 }}">
+	<img class="img-fluid pb-4" width="100px" src="/assets/images/CAR/{{ car.picture5 }}">
 
-    {{ include('car/_delete_form.html.twig') }} #}
+	{{ include('car/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <img class="img-fluid pb-4" width="100px" src="/assets/images/CAR/{{ car.picture }}">
-    <img class="img-fluid pb-4" width="100px" src="/assets/images/CAR/{{ car.picture2 }}">
-    <img class="img-fluid pb-4" width="100px" src="/assets/images/CAR/{{ car.picture3 }}">
-    <img class="img-fluid pb-4" width="100px" src="/assets/images/CAR/{{ car.picture4 }}">
-    <img class="img-fluid pb-4" width="100px" src="/assets/images/CAR/{{ car.picture5 }}">
-
-    {{ include('car/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <div class="container justify-content-between d-flex flex-wrap py-2">
-        <a class="btn btn-secondary" href="{{ path('app_car_index') }}">Retour</a>
-        <form method="post" action="{{ path('app_car_delete', {'id': car.id}) }}" onsubmit="return confirm('Êtes-vous sûr de bien vouloir supprimer cet élément?');">
-            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ car.id) }}">
-            <button class="btn btn-danger">Delete</button>
-        </form>
-    </div>
+	<div class="container justify-content-between d-flex flex-wrap py-2">
+		<a class="btn btn-secondary" href="{{ path('app_car_index') }}">Retour</a>
+		<form method="post" action="{{ path('app_car_delete', {'id': car.id}) }}" onsubmit="return confirm('Êtes-vous sûr de bien vouloir supprimer cet élément?');">
+			<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ car.id) }}">
+			<button class="btn btn-danger">Delete</button>
+		</form>
+	</div>
 {% endblock %}
