--- a/templates/car/show.html.twig
+++ b/templates/car/show.html.twig
@@ -1,70 +1,85 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Car{% endblock %}
+{% block title %}Car
+{% endblock %}
 
 {% block body %}
-    <h1>Car</h1>
+	<nav aria-label="breadcrumb" class="offset-2 col-10">
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item">
+				<a href="{{ path('app_admin') }}" title="Accueil ADMIN" class="link_black">
+					Accueil ADMIN
+				</a>
+			</li>
+            <li class="breadcrumb-item">
+				<a href="{{ path('app_car_index') }}" class="link_black">
+					Liste de véhicules
+				</a>
+			</li>
+		</ol>
+	</nav>
+	<h1>Car</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ car.id }}</td>
-            </tr>
-            <tr>
-                <th>Status</th>
-                <td>{{ car.status }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ car.title }}</td>
-            </tr>
-            <tr>
-                <th>Year</th>
-                <td>{{ car.year }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ car.description | raw }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ car.price }}</td>
-            </tr>
-            <tr>
-                <th>Date_add</th>
-                <td>{{ car.dateAdd ? car.dateAdd|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Date_update</th>
-                <td>{{ car.dateUpdate ? car.dateUpdate|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Picture</th>
-                <td><img class="img-fluid" width="100" src="/assets/images/CAR/{{ car.picture }}"></td>
-            </tr>
-            <tr>
-                <th>Picture2</th>
-                <td><img class="img-fluid" width="100" src="/assets/images/CAR/{{ car.picture2 }}"></td>
-            </tr>
-            <tr>
-                <th>Picture3</th>
-                <td><img class="img-fluid" width="100" src="/assets/images/CAR/{{ car.picture3 }}"></td>
-            </tr>
-            <tr>
-                <th>Picture4</th>
-                <td><img class="img-fluid" width="100" src="/assets/images/CAR/{{ car.picture4 }}"></td>
-            </tr>
-            <tr>
-                <th>Picture5</th>
-                <td><img class="img-fluid" width="100" src="/assets/images/CAR/{{ car.picture5 }}"></td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table">
+		<tbody>
+			<tr>
+				<th>Id</th>
+				<td>{{ car.id }}</td>
+			</tr>
+			<tr>
+				<th>Status</th>
+				<td>{{ car.status }}</td>
+			</tr>
+			<tr>
+				<th>Title</th>
+				<td>{{ car.title }}</td>
+			</tr>
+			<tr>
+				<th>Year</th>
+				<td>{{ car.year }}</td>
+			</tr>
+			<tr>
+				<th>Description</th>
+				<td>{{ car.description | raw }}</td>
+			</tr>
+			<tr>
+				<th>Price</th>
+				<td>{{ car.price }}</td>
+			</tr>
+			<tr>
+				<th>Date_add</th>
+				<td>{{ car.dateAdd ? car.dateAdd|date('Y-m-d H:i:s') : '' }}</td>
+			</tr>
+			<tr>
+				<th>Date_update</th>
+				<td>{{ car.dateUpdate ? car.dateUpdate|date('Y-m-d H:i:s') : '' }}</td>
+			</tr>
+			<tr>
+				<th>Picture</th>
+				<td><img class="img-fluid" width="100" src="/assets/images/CAR/{{ car.picture }}"></td>
+			</tr>
+			<tr>
+				<th>Picture2</th>
+				<td><img class="img-fluid" width="100" src="/assets/images/CAR/{{ car.picture2 }}"></td>
+			</tr>
+			<tr>
+				<th>Picture3</th>
+				<td><img class="img-fluid" width="100" src="/assets/images/CAR/{{ car.picture3 }}"></td>
+			</tr>
+			<tr>
+				<th>Picture4</th>
+				<td><img class="img-fluid" width="100" src="/assets/images/CAR/{{ car.picture4 }}"></td>
+			</tr>
+			<tr>
+				<th>Picture5</th>
+				<td><img class="img-fluid" width="100" src="/assets/images/CAR/{{ car.picture5 }}"></td>
+			</tr>
+		</tbody>
+	</table>
 
-    <a href="{{ path('app_car_index') }}">back to list</a>
+	<a href="{{ path('app_car_index') }}">back to list</a>
 
-    <a href="{{ path('app_car_edit', {'id': car.id}) }}">edit</a>
+	<a href="{{ path('app_car_edit', {'id': car.id}) }}">edit</a>
 
-    {{ include('car/_delete_form.html.twig') }}
+	{{ include('car/_delete_form.html.twig') }}
 {% endblock %}
