--- a/templates/car_det/index.html.twig
+++ b/templates/car_det/index.html.twig
@@ -44,7 +44,7 @@
 	<div class="d-flex flex-wrap justify-content-between">
 		<div class="row">
 			<strong>
-				<span class="product-prices">
+				<span>
 					&euro;
 					{{ car.price }}
 				</span>
