--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -126,19 +126,23 @@
 	<div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
 		Nos contacts:
 	</div>
-
 	<div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
-		{# <i class="icon-phone icon icon-phone-footer"></i> #}
 		<img src="/assets/images/icons/appel.png" class="icon-phone-footer">
 		<a href="tel:0669572725" class="tel-footer">06 69 57 27 25</a>
 	</div>
-	<div
-		class="col-xl-5 col-lg-5 col-md-12 col-sm-12 col-12">
-		{# <i class="iconify icon-mail-footer" data-icon="ion:mail-outline"></i> #}
+	<div class="col-xl-5 col-lg-5 col-md-12 col-sm-12 col-12">
 		<img src="/assets/images/icons/map-black.png" class="icon-mail-footer">
 		<a href="https://goo.gl/maps/BJQwzz83m6Bb5L9n6" class="mail-footer">27B Rue Marius Petit, 80450 Camon</a>
 	</div>
-
+	<div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
+		Horaires:
+	</div>
+	<div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
+		Lundi - Samedi
+	</div>
+	<div class="col-xl-5 col-lg-5 col-md-12 col-sm-12 col-12">
+		9:30 - 18:30
+	</div>
 </div>
 <section class="section">
 	<div class="background-media"></div>
