--- a/templates/tire_list/index.html.twig
+++ b/templates/tire_list/index.html.twig
@@ -136,7 +136,7 @@
 					</div>
 					<div style="text-align:center;">{{ tire.width }}/{{ tire.height }}
 						R{{ tire.diameter }}
-						<img src="/assets/images/icons/{{tire.season.picture}}" title={{tire.season}} style="width:20px;">
+						<img src="/assets/images/icons/{{tire.season.picture}}" title={{tire.season}} style="width:20px;"> {{ tire.new_used.name}}
 					</div>
 				</div>
 			</article>
